--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="start">START</string>
-    <string name="stop">STOP</string>
+    <string name="pause">PAUSE</string>
     <string name="reset">RESET</string>
 </resources>
