--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="start">START</string>
     <string name="pause">PAUSE</string>
+    <string name="resume">RESUME</string>
+
     <string name="reset">RESET</string>
 </resources>
